Fix issue where landscape-orientation images larger than the max-width get stretched

--- a/enterprise/frontend/src/metabase-enterprise/documents/components/Editor/Editor.module.css
+++ b/enterprise/frontend/src/metabase-enterprise/documents/components/Editor/Editor.module.css
@@ -189,6 +189,7 @@
 
 .img {
   max-width: 80%;
+  height: auto;
   display: block;
   margin: 1rem auto;
 
